@@ -1,10 +1,14 @@
 -------------------------
+2015-05-08	v0.09
+* Added call to routes->under() when routes->bridge() is not available (Bug #8)
+
+-------------------------
 2014-05-13	v0.08
 * Forgot to deference array returned from app->secrets(); this was caused by too much ruby programming :) (Bug #7, thanks Roberto Frenna)
 
 -------------------------
 2014-05-12	v0.07
-* Call app->secrets() when app->secret() is not available (Bug #6)
+* Added call to app->secrets() when app->secret() is not available (Bug #6)
 
 -------------------------
 2013-05-27	v0.06
